<!-- res/layout/item_user.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:focusable="true"
    android:orientation="horizontal"
    android:background="@drawable/recycle_user"
    android:layout_marginTop="5dp"
    android:clickable="true"
    android:padding="5dp">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/profile_image"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_person_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textStyle="bold"
            android:fontFamily="@font/bebas_neue_regular"
            android:textColor="@color/white"
            android:text="@string/username"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:text="@string/name"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
