<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tawny_port"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/logo"
        android:elevation="100dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/marron_flush"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/charm"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:cursorColor="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:drawableStart="@drawable/mail"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/firasans_semibold"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/charm"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:cursorColor="@color/white"
                app:hintTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/firasans_semibold"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/charm"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:cursorColor="@color/white"
                app:hintTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/c_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/firasans_semibold"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn"
                android:fontFamily="@font/firasans_semibold"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/prozalibre_bold"
        android:padding="8dp"
        android:text="@string/already_have_a_account_signin_now"
        android:textAlignment="center"
        android:textColor="@color/ribbon_red"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>
